feat: Multiple Classrooms (#171)
* fix bug where non-students can't access create organization

* ref SQU-98 change classrooms structure

* ref SQU-98 create classroom refactor

* rename

* ref SQU-98 list classrooms endpoints

* ref SQU-98 specify classroom for /content, accept, reject

* ref SQU-98 update classroom endpoint

* ref SQU-98 moderate tab

* fix infinite calls in content browser

* ref SQU-102 vite dashboard and shadcn table

* ref SQU-98 ref SQU-102 styling and classrooms table

* ref SQU-98 delete classroom endpoint and hook

* ref SQU-98 delete classrooms
